--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,7 @@ repos:
     rev: v0.1.33
     hooks:
       - id: terraform-fmt
+        language_version: python3.9
       - id: tf2docs
         language_version: python3.9
   - repo: git://github.com/bridgecrewio/checkov
