--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: main
+          token: ${{ github.token }}
       - uses: hashicorp/setup-terraform@master
         with:
           terraform_version: 0.14.5
@@ -34,6 +35,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Bump version and push tag
+        if: ${{ !env.ACT }}
         uses: anothrNick/github-tag-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
