--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,9 +1,13 @@
 ---
 # yamllint disable rule:line-length
-name: pull_request
-on: pull_request
+name: Pull Request
+on:
+  pull_request:
+  workflow_dispatch:
+
 env:
   terraform: 0.14.8
+  terraform-docs: 0.11.2
   tf_target_dir: example/examplea
 
 jobs:
